# griffith-custom-classifier-2022

./: .gitignore  Cargo.toml  README.md
image_parquet_rectify/: Cargo.toml
image_parquet_rectify/src/: main.rs
lidar_image_calib/: Cargo.toml
lidar_image_calib/src/: fuse.rs  main.rs
notebooks/: check_timeseries.ipynb  gen_video_from_parquet.ipynb  list_webp_from_parquet.ipynb
sdcar_calib/: Cargo.toml
sdcar_calib/src/: ego.rs  lib.rs  lidar.rs
sdcar_pcl/: Cargo.toml
sdcar_pcl/examples/: downsample_point_clouds.rs  iterate_point_clouds.rs  iterate_point_clouds_images.rs  kdtree_point_clouds.rs  ransac2d_point_clouds.rs  read_point_clouds.rs
sdcar_pcl/src/: bounding_box.rs  image.rs  lib.rs  point.rs  point_cloud.rs  prelude.rs
sdcar_pcl/src/filters/: crop_box.rs  mod.rs  voxel_grid.rs  voxel_grid_par.rs
sdcar_pcl/src/reader/: parquet.rs
sdcar_pcl/src/search/: kdtree.rs  mod.rs
sdcar_pcl/src/segmentation/: extract_clusters.rs  mod.rs  sac.rs
sdcar_pcl/tests/: bounding_box_test.rs  kdtree_clusters_test.rs  kdtree_test.rs  setup_data.rs
sdcar_types/: Cargo.toml
sdcar_types/examples/: print_image.rs  print_image_lidar_seq.rs  print_nav_sat_fix.rs  print_point_cloud2.rs  print_vehicle_state.rs  schema_image.rs  schema_nav_sat_fix.rs  schema_point_cloud2.rs  schema_vehicle_state.rs
sdcar_types/src/: lib.rs
sdcar_types/src/msg/: image.rs  mod.rs  nav_sat_fix.rs  point_cloud2.rs  vehicle_state.rs
sdcar_types/src/parquet/: image.rs  mod.rs  nav_sat_fix.rs  point_cloud2.rs  vehicle_state.rs
sdcar_types/src/reader/: combined.rs  mod.rs  parquet.rs
sdcar_vision/: Cargo.toml
sdcar_vision/calibration/: calibration.yaml  calibration_6mm.yaml
sdcar_vision/examples/: print_stereo_calibration.rs  project_lidar_to_camera.rs
sdcar_vision/src/: bounding_box.rs  camera.rs  fusion.rs  image_frame.rs  lib.rs  lidar_to_camera.rs  object_detection_2d.rs  stereo_calibration.rs  stereo_rectify.rs
