[package]
name = "sdcar_calib"
version = "0.2.0"
authors = ["Nick Hortovanyi <nick.hortovanyi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.5"
# opencv = {path= "../../dev/external/opencv-rust", version = "^0.63", default-features = false, features =["calib3d", "highgui", "imgcodecs", "imgproc"] }
opencv = { version = "^0.63", default-features = false, features =["calib3d", "highgui", "imgcodecs", "imgproc"] }
# opencv = "^0.53"
nalgebra = "^0.30"
rand = "^0.8"
rand_distr = "^0.4"
sdcar_types = {path="../sdcar_types", version = "^0.2.0"}
sdcar_pcl = {path="../sdcar_pcl", version = "^0.2.0"}
sdcar_vision = {path="../sdcar_vision", version = "^0.2.0"}