[package]
name = "sdcar_types"
version = "0.2.0"
authors = ["Nick Hortovanyi <nick.hortovanyi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="^0.4"
parquet="^11.0.0"
arrow="^11.0.0"
arrow-flight="^11.0.0"
coord_transforms="^1.3.1"
nalgebra="^0.30"
